grails/testdata/grails/highlighting/JspTagInGsp.gsp
<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
<fmt:formatNumber value="${10}" pattern=".00"/>
<<error descr="Element fmt:lu is not allowed here">fmt:lu</error> value="${10}" pattern=".00"/>
